# mmc_latest

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ORGANIZER_MESSAGE.md  dev.sh  requirements.txt
grid_world_hackathon/gaws_ws/src/grid_world/worlds/: grid_world_FINAL.sdf
legacy_round3_base/archived_mpc/: mpc_tracker_node.py
src/mini_r1_v1_application/: package.xml  setup.cfg  setup.py
src/mini_r1_v1_application/config/: arena.yaml  aruco_localizer.yaml  costmap.yaml  coverage_tracker.yaml  dynamic_obstacle.yaml  ekf.yaml  mission_manager.yaml  pursuit_controller.yaml  rrt_planner.yaml  sweep_planner.yaml  symbol_detector.yaml
src/mini_r1_v1_application/launch/: bringup.launch.py  dynamic_obstacles.launch.py  full.launch.py  infrastructure.launch.py  mission.launch.py  navigation.launch.py  perception.launch.py
src/mini_r1_v1_application/mini_r1_v1_application/nodes/: aruco_localizer_node.py  coverage_tracker_node.py  dynamic_obstacle_node.py  mission_manager_node.py  pursuit_controller_node.py  rrt_planner_node.py  sweep_planner_node.py  symbol_detector_node.py
src/mini_r1_v1_application/mini_r1_v1_application/utils/: deprojection.py  stuck_detector.py
src/mini_r1_v1_description/: CMakeLists.txt
src/mini_r1_v1_description/urdf/: gazebo_control.xacro  sensors.xacro
src/mini_r1_v1_description/worlds/: TRAFFIC_EDITOR_GUIDE.md  empty.sdf  generate_markers_and_signs.py  selected_world.txt  sign_config.yaml
src/mini_r1_v1_description/worlds/scripts/: build_dataset_world.py  dataset_gui.py  download_models.py  generate_dataset.py  generate_markers_and_signs.py  generate_symbols.py  generate_world.sh  inject_obstacles.py  make_big_world.py  patch_textures.py  run_dataset_capture.sh  world_selector.py
src/mini_r1_v1_description/worlds/source/dataset_all_symbols/: dataset_all_symbols.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_big_symbol_1/: dataset_big_symbol_1.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_big_symbol_2/: dataset_big_symbol_2.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_big_symbol_3/: dataset_big_symbol_3.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_1/: dataset_symbol_1.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_2/: dataset_symbol_2.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_3/: dataset_symbol_3.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_4/: dataset_symbol_4.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_5/: dataset_symbol_5.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_6/: dataset_symbol_6.building.yaml
src/mini_r1_v1_description/worlds/source/dataset_symbol_7/: dataset_symbol_7.building.yaml
src/mini_r1_v1_description/worlds/source/dead_end/: dead_end.building.yaml
src/mini_r1_v1_description/worlds/source/dead_end_complex/: dead_end_complex.building.yaml
src/mini_r1_v1_description/worlds/source/loop_test/: loop_test.building.yaml
src/mini_r1_v1_description/worlds/source/multi_floor_college/: multi_floor_college.building.yaml
src/mini_r1_v1_description/worlds/source/simple/: simple.building.yaml
src/mini_r1_v1_description/worlds/source/simple_long/: simple.building.yaml
src/mini_r1_v1_gz/: CMakeLists.txt
src/mini_r1_v1_gz/config/: ros_gz_bridge.yaml
src/mini_r1_v1_gz/launch/: sim.launch.py
src/mini_r1_v1_gz/rviz/: sim.rviz
src/mini_r1_v1_round3/: package.xml  run_round3.sh  setup.cfg  setup.py
src/mini_r1_v1_round3/config/: apriltag.yaml  ekf.yaml  nav2_params.yaml  ros_gz_bridge.yaml  slam_toolbox.yaml
src/mini_r1_v1_round3/launch/: round3.launch.py  sim_only.launch.py
src/mini_r1_v1_round3/mini_r1_v1_round3/nodes/: logo_detector_node.py  mission_manager_node.py  mpc_tracker_node.py  nav_diagnostic_node.py  tag_command_node.py  tile_detector_node.py
src/mini_r1_v1_round3/mini_r1_v1_round3/utils/: deprojection.py  nav2_utils.py  palette.py  path_smoother.py  sweep_planner.py
src/mini_r1_v1_round3/rviz/: round3.rviz
src/mini_r1_v1_round3/urdf/: gazebo_control.xacro  mini_r1.urdf.xacro  robot_core.xacro  sensors.xacro
